--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"); */
+
+.App {
+  /* font-family: "Montserrat", sans-serif; */
+  /* flex: 1; */
+  display: flex;
+  flex-direction: column;
+  /* background-color: antiquewhite; */
+  width: 100%;
+  height: 100%;
+  gap: 10rem;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
