--- a/src/components/AdminSignIn/style.module.css
+++ b/src/components/AdminSignIn/style.module.css
@@ -1,27 +1,20 @@
-body {
-  font-family: system-ui;
-  max-width: 100%;
-  max-height: 100%;
-  margin: auto;
-  padding: 10rem 0 20rem;
-  text-align: center;
-
-  align-items: center;
-}
-
 .wrapper {
   display: flex;
+  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  margin-top: 20rem;
-  padding-top: 20rem;
+  gap: 1.5 rem;
+  /* margin-top: 20rem; */
 }
 
 .logo {
-  background-color: hsl(240, 57%, 44%);
   display: flex;
-  justify-content: space-around;
+  /* background-color: hsl(240, 57%, 44%); */
+  /* display: flex; */
+  /* justify-content: space-around; */
   align-items: center;
   color: peru;
+  margin-block-end: 2rem;
 }
 
 img {
@@ -31,6 +24,16 @@ img {
 
 .formContainer {
   display: flex;
+  /* flex: 1; */
+  align-items: center;
+  flex-direction: column;
+  /* text-align: center; */
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  background-color: pink;
+  gap: 0.5rem;
 }
 
 .inputRequired {
@@ -38,18 +41,26 @@ img {
   align-items: center;
   background-color: rgb(255, 129, 150);
   flex-flow: column;
+  width: 75%;
+  /* height: 5ch; */
+}
+
+label {
+  width: 100%;
+  max-width: 400px;
+  text-align: start;
+  margin: 1rem 0 1rem 0;
 }
 
 input {
-  position: relative;
   outline: none;
   border: none;
-  background-color: #e4e9ec;
-  /* color: #16161a; */
+  background-color: inherit;
   padding: 0.5rem;
-  margin: 0.5rem 0;
-  width: 35%;
+  margin: 0.5rem;
+  width: 75%;
   height: 40px;
+  max-width: 400px;
 }
 
 .help {
@@ -75,13 +86,13 @@ button {
   font-family: inherit;
   background-color: #110f0f;
   cursor: pointer;
-  width: 100.11px;
+  width: 50%;
   transition: 0.5s ease-in-out;
 }
 button:hover {
   background-color: hsl(240, 57%, 44%);
   color: #ffffff;
-  width: 425px;
+  width: 75%;
 }
 button:focus,
 button:focus-visible {
