--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,84 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
+
 * {
-  /* margin: 0;
-  padding: 0; */
+  /* margin: 0; */
   box-sizing: border-box;
+  /* padding: 0; */
+}
+
+body {
+  font-family: "Space Grotesk", sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  /* padding: 10rem 0 20rem; */
+  text-align: center;
+  align-items: center;
+  /* background-color: pink; */
+  justify-content: flex-start;
+  display: flex;
+  flex-flow: column wrap;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+html {
+  font-size: 100%;
+} /*16px*/
+
+body {
+  background: white;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #000000;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+small,
+.text_small {
+  font-size: 0.8rem;
 }
